--- a/java/whippi-test/pom.xml
+++ b/java/whippi-test/pom.xml
@@ -18,6 +18,8 @@
         <gae.version>1.9.48</gae.version>
 
         <junit.version>4.7</junit.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
     <dependencies>
