--- a/java/whippi/pom.xml
+++ b/java/whippi/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 </project>
